[package]
name = "matrix-job"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
liquid = "0.26.6"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
serde_yaml = "0.9.34"
tracing = { version = "0.1.40", features = ["valuable"] }
tracing-subscriber = { version = "0.3.18", features = ["valuable", "env-filter"] }
zen-expression = { version = "0.24.2", default-features = false, features = ["regex-lite"] }
